# seiten

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/workflows/: ci.yml  docker.yml
action/: action.yml
example/: docker-compose.yml  nginx.conf
src/: config.rs  lib.rs  main.rs
src/routes/: mod.rs  upload.rs
