[package]
name = "seiten"
version = "0.1.0"
authors = ["Carter Himmel <carter@sycer.tech>"]
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync",
  "signal"
] }
flate2 = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
envy = "0.4"
once_cell = "1"
chrono = { version = "0.4", default-features = false }
gpgme = "0.11.0"
axum = { version = "0.6.20", features = ["tracing", "macros", "headers"] }
anyhow = "1.0.75"
headers = "0.3.9"
base64 = "0.21.5"
tower-http = { version = "0.4.4", features = ["tracing", "trace", "request-id"] }
tower = { version = "0.4.13", features = ["tracing", "timeout"] }
http = "0.2.9"
axum_typed_multipart = "0.10.1"
